gitops/esapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esapp-ingress
  namespace: backend-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fe.57.155.223.9.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: esapp
                port:
                  number: 8080
